調整環境變數，增加 Hipchat hook 相關的參數

--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,6 @@
 DB_HOST=192.168.65.1 # 172.17.0.1
 DB_NAME=
-DB_USER=
+DB_USER=root
 DB_PASSWORD=
 
 MAIL_SERVER=
@@ -8,7 +8,10 @@ MAIL_DOMAIN=
 MAIL_PORT=
 MAIL_USER=
 MAIL_PASSWORD=
+MAIL_RECEIVER=
 
 SECRET_KEY=
+SECRET_KEY_BASE=
 
-ROLLBAR_ACCESS_TOKEN=
+HIPCHAT_TOKEN=
+HIPCHAT_ROOM=
