--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,10 +1,8 @@
 development:
-  secret_key_base: 012345678901234567890123456789
+  secret_key_base: <%= ENV["SECRET_KEY"] %>
 
 test:
-  secret_key_base: 012345678901234567890123456789
-
-# Do not keep production secrets in the repository,
-# instead read values from the environment.
-production:
   secret_key_base: <%= ENV["SECRET_KEY"] %>
+
+production:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
