--- a/rails.env.conf
+++ b/rails.env.conf
@@ -7,5 +7,8 @@ env MAIL_DOMAIN;
 env MAIL_PORT;
 env MAIL_USER;
 env MAIL_PASSWORD;
+env MAIL_RECEIVER;
 env SECRET_KEY;
-env ROLLBAR_ACCESS_TOKEN;
+env SECRET_KEY_BASE;
+env HIPCHAT_TOKEN;
+env HIPCHAT_ROOM;
