補上 nginx-proxy 需要的環境變數
https://github.com/jwilder/nginx-proxy

--- a/rails.env.conf
+++ b/rails.env.conf
@@ -12,3 +12,6 @@ env SECRET_KEY;
 env SECRET_KEY_BASE;
 env HIPCHAT_TOKEN;
 env HIPCHAT_ROOM;
+env VIRTUAL_HOST;
+env VIRTUAL_PORT;
+env VIRTUAL_PROTO;
