調整預設環境變數，以配合 nginx-proxy 設定
Container 內的 Nginx 不再負責 https 驗證，
交給 nginx-proxy 或更前方的 Frontend 去實作。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,9 @@ your_image_name:
   restart: always
   volumes:
     - ./:/home/app
+  expose:
+    - "80"
   ports:
-    - "8080:80"
-    - "8443:443"
+    - "80"
   env_file:
     - docker.env
