引入 MariaDB Container，設定資料庫皆為 MySQL 型態，並為 utf8mb4 編碼

--- a/docker.env
+++ b/docker.env
@@ -1,7 +1,12 @@
-DB_HOST=192.168.65.1 # 172.17.0.1
-DB_NAME=
+# For MySQL Container
+MYSQL_ROOT_PASSWORD=12345678
+MYSQL_DATABASE=rails
+
+# For Rails Container
+DB_HOST=db
+DB_NAME=rails
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=12345678
 
 MAIL_SERVER=
 MAIL_DOMAIN=
