--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,19 @@
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
   adapter: mysql2
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
   host: <%= ENV['DB_HOST'] %>
   database: <%= ENV['DB_NAME'] %>
   username: <%= ENV['DB_USER'] %>
   password: <%= ENV['DB_PASSWORD'] %>
-  encoding: utf8
+
+test:
+  <<: *default
+  database: <%= "#{ENV['DB_NAME']}_test" %>
+
+development:
+  <<: *default
+  database: <%= "#{ENV['DB_NAME']}_development" %>
+
+production:
+  <<: *default
