將 Exception 接到 MatterMost

--- a/docker.env
+++ b/docker.env
@@ -18,8 +18,10 @@ MAIL_RECEIVER=
 SECRET_KEY=
 SECRET_KEY_BASE=
 
-HIPCHAT_TOKEN=
-HIPCHAT_ROOM=
+MATTERMOST_WEBHOOK_URL=
+MATTERMOST_CHANNEL=town-square
+MATTERMOST_USERNAME=Rails App
+MATTERMOST_ICON=https://upload.wikimedia.org/wikipedia/commons/1/16/Ruby_on_Rails-logo.png
 
 VIRTUAL_HOST=
 VIRTUAL_PORT=80
