--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ config/initializers/secret_token.rb
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
-.env
+# .env
 
 ## Environment normalization:
 /.bundle
@@ -42,5 +42,3 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
-
-config/database.yml
