--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
-*.rbc
-capybara-*.html
-.rspec
-/log
-/tmp
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/public/system
-/coverage/
-/spec/tmp
-*.orig
-rerun.txt
-pickle-email-*.html
-
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 
@@ -20,7 +6,7 @@ config/initializers/secret_token.rb
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
-# .env
+.env
 
 ## Environment normalization:
 /.bundle
@@ -31,6 +17,7 @@ config/initializers/secret_token.rb
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+.ruby-version
 
 # if using bower-rails ignore default bower_components path bower.json files
 /vendor/assets/bower_components
@@ -42,3 +29,38 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+/coverage/
+/spec/tmp
+
+public/system
+public/assets
+public/uploads
+
+.DS_Store
+.passenger
+rerun.txt
+
+*.rbc
+*.tmp
+*.log
+*.zip
+*.tar
+*.pyc
+*.csv
+*.tar
+*.gz
+*.orig
+
+capybara-*.html
+pickle-email-*.html
