--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@
 # BASTION_USER=
 # BASTION_PORT=
 
-APPLICATION=''
-REPO_URL=''
-DEPLOY_TO=''
+APPLICATION=
+REPO_URL=
+DEPLOY_TO=
 KEEP_RELEASES=3
 
-MATTERMOST_URI=''
-MATTERMOST_CHANNEL='town-square'
-MATTERMOST_ICON=''
+MATTERMOST_URI=
+MATTERMOST_CHANNEL=town-square
+MATTERMOST_ICON=
 
 # For MySQL Container
 MYSQL_ROOT_PASSWORD=12345678
