--- a/.env
+++ b/.env
@@ -13,14 +13,14 @@ MATTERMOST_CHANNEL=town-square
 MATTERMOST_ICON=
 
 # For MySQL Container
-MYSQL_ROOT_PASSWORD=12345678
+MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=rails
 
 # For Rails Container
-DB_HOST=db
+DB_HOST=127.0.0.1
 DB_NAME=rails
 DB_USER=root
-DB_PASSWORD=12345678
+DB_PASSWORD=root
 
 MAIL_SERVER=
 MAIL_DOMAIN=
