add scaffold user

--- a/Dockerfile0
+++ b/Dockerfile0
@@ -1,8 +1,8 @@
 # See https://github.com/phusion/passenger-docker/blob/master/Changelog.md
-FROM phusion/passenger-ruby25:0.9.35
+FROM phusion/passenger-ruby23:0.9.35
 
 RUN apt-get update && \
-    apt-get install -y imagemagick build-essential libpq-dev
+    apt-get install -y imagemagick
 
 # Set correct environment variables.
 ENV HOME /root
